<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_light"
    android:padding="@dimen/space_m"
    tools:context="com.ahmetsudeys.rotauygulama.ui.customers.CustomersFragment">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/customers_title"
        android:textAppearance="?attr/textAppearanceTitleLarge"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/card_search"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_search"
        style="@style/Widget.Rota.Card"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/space_s"
        app:layout_constraintStart_toEndOf="@id/text_title"
        app:layout_constraintEnd_toStartOf="@id/button_ledger"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/button_ledger"
        app:layout_constraintWidth_max="200dp"
        app:layout_constraintWidth_min="90dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/space_s"
            android:paddingEnd="@dimen/space_s"
            app:hintEnabled="false"
            app:startIconDrawable="@drawable/ic_search"
            app:startIconTint="@color/brand_red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/search_customer"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLines="1"
                android:padding="0dp"
                android:textSize="9sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>

    <!-- Alacak Defteri (receivables ledger) entry point -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/button_ledger"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginStart="@dimen/space_s"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/ledger_open"
        app:cardBackgroundColor="@color/brand_red"
        app:cardCornerRadius="21dp"
        app:cardElevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/white">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:contentDescription="@null"
            app:srcCompat="@drawable/ic_wallet"
            app:tint="@color/white" />
    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/top_row_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="text_title,card_search,button_ledger" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_filters"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_s"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_row_barrier"
        app:singleSelection="true"
        app:selectionRequired="true"
        app:chipSpacingHorizontal="@dimen/space_s">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_filter_all"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_all"
            android:checked="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_filter_painted"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_painted" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_filter_not_painted"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_not_painted" />
    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_customers"
        style="@style/Widget.Rota.Card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/space_m"
        app:layout_constraintBottom_toTopOf="@id/button_add_customer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_group_filters">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/space_s">

            <TextView
                android:id="@+id/text_empty"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:gravity="center"
                android:text="@string/no_customers_yet"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_customers"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:overScrollMode="never"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/item_customer_row" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_add_customer"
        style="@style/Widget.Rota.Button.Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_m"
        android:text="@string/add_customer"
        app:icon="@drawable/ic_plus"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/space_s"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>


